--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <script type="javascript/text" src="index.js"></script>
    
-   <link rel="stylesheet" href="./css/main.css">
+   
+   
    
    <meta charset="utf-8">
     <title>Caching..</title>
 
 
   <body>
-   <script src="main.js"></script>
-   <h1>Heading...</h1>
+   <script src="index.js"></script>
+   <h1>aHeading...</h1>
    
    
    
-   <div id="root"></div>
-   <div style="border:1px red solid" id="roota"></div>
    
    
    <fieldset>fssf</fieldset>
